fix: Update attribute bar style, border-radius only right side. This fixes broken appearance when values are too small.

--- a/src/styles/info-digimon.css
+++ b/src/styles/info-digimon.css
@@ -22,7 +22,8 @@
   background-color: #d8d8d8;
   height: 100%;
   width: 0;
-  border-radius: 35px;
+  border-top-right-radius: 35px;
+  border-bottom-right-radius: 35px;
 }
 
 .info-digimons__external-column-bar {
@@ -30,5 +31,6 @@
   background-color: #ffffff;
   height: 25px;
   width: 80%;
-  border-radius: 35px;
+  border-top-right-radius: 35px;
+  border-bottom-right-radius: 35px;
 }
